# sr

./: .gitignore  build.sh  includes.sh  update_schema.sh
api/: README.md  pyproject.toml
api/ai/: best_model_mm.pt  best_model_mm.pth  scaler_mm.pkl
api/db/: 1.sql
api/src/sr_api/: __init__.py  commands.py  config.py  manifest.json
api/src/sr_api/assets/: main-27a80dda.js  main-945d6e26.css  main-9535bf20.js
api/src/sr_api/controllers/: auth.py  ctrl_models.py  decorators.py  person.py  prediction.py  user.py
api/src/sr_api/models/: users.py
api/src/sr_api/prediction/: Net_Conv.py  prediction_engine.py
api/src/sr_api/repositories/: user.py
api/src/sr_api/services/: user.py
api/src/sr_api/templates/: index.html
api/src/sr_api/utils/: database.py  files.py
client/: README.md  index.html  openapitools.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx  routes.ts
client/src/components/: PrivateRoute.tsx  ProfileMenu.tsx
client/src/contexts/: actions.ts  context.tsx  reducer.ts
client/src/pages/: Auth.tsx  SoundCheck.tsx
client/src/shared/api/axios-client/: api.ts  base.ts  common.ts  configuration.ts  index.ts
client/src/shared/api/user-client/: index.ts  si-api.ts
