[tool.poetry]
name = "sr-api"
version = "0.1.0"
description = ""
authors = ["Ihor Yarovyy <Ihor.Yarovyy@ukr.net>"]
readme = "README.md"
packages = [{include = "sr_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
quart = "^0.18.4"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
quart-bcrypt = "^0.0.6"
python-dotenv = "^1.0.0"
shell = "^1.0.1"
pydantic = "^1.10.9"
quart-cors = "^0.6.0"
torch = "^2.0.1"
librosa = "^0.10.0.post2"
pandas = "^2.0.3"
scikit-learn = "1.2.2"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.14"
quart-jwt-extended = "^0.1.0"
quart-schema = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "sr_api:run"